golang-k8s/deployments/productapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: product-api-svc
  namespace: default
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 80
      name: "http"
      targetPort: 5001
